--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-4">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Fullstack Developer</h3>
-              <div class="subheading mb-3"><a href="http://cpappdemoslides.github.io/" target="_blank"> Control pega app</a></div>
+              <div class="subheading mb-3"><a href="https://ypetrilli.github.io/cpappdemoslides/" target="_blank"> Control pega app</a></div>
               <p class="text-justify"> Design and development (with Bootstrap/PHP) appointments application for small business.
 			  </p>
             </div>
