--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			Computer Engineer/Fullstack developer
 		  </div>
 		  <div class="subheading mb-5"> 
-			Valencia, Venezuela. (58) 0414 583 4058 / <a href="mailto:ypetrilli19@gmail.com">ypetrilli19@gmail.com</a>
+			Venezuela. (58) 0414 583 4058 / <a href="mailto:ypetrilli19@gmail.com">ypetrilli19@gmail.com</a>
 		  </div>
           <p class="text-justify">
 		    College professional with a 5 year experience in fullstack web development. Dedicated and
